Fixed: Home vision section narrow on large screens

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -678,7 +678,7 @@ html {
           flex-wrap: wrap;
 
           @media screen and (min-width: 768px) {
-            padding: 0 16.67%;
+            max-width: 750px;
           }
 
           .text {
